--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@
     padding: 5px 10px;
     flex-grow: 1;
     margin: 10px;
-    font-size: larger;
+    font-size:16px;
+    font-weight: bolder;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .heart{
